# ssh-remote-desktop

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.en.md  README.md  SECURITY.md  __init__.py  build_client_linux.sh  build_client_macos.sh  build_client_windows.sh  build_server_gui_linux.sh  build_server_linux.sh  pyproject.toml  rd_client_entry.py  rd_server_entry.py  rd_server_gui_entry.py  requirements-linux.txt  requirements.txt
.github/workflows/: ci.yml  release.yml
client/: __init__.py  __main__.py  connect_dialog.py  decoder.py  desktop_view.py  files.py  files_dialog.py  host_key_dialog.py  hostkeys.py  i18n.py  keymap_qt.py  keys_dialog.py  main_window.py  preferences_dialog.py  theme.py  transport.py
common/: __init__.py  config.py  framing.py  messages.py  protocol.py  updater.py
crypto/: __init__.py  keygen.py
docs/img/: README.md
packaging/systemd/: ssh-remote-desktop.service
scripts/: install-client-linux.sh  install-client-windows.ps1  install-server-linux.sh  install.ps1  install.sh  rd-launch.sh  release.sh
server/: __init__.py  __main__.py  auth.py  broker.py  connection.py  daemon.py  encoder.py  files.py  keymap.py  session.py
server/backend/: __init__.py  base.py  wayland.py  wayland_pipewire.py  x11.py
server_gui/: __init__.py  __main__.py  controller.py
tests/: conftest.py  test_adapt_fps.py  test_auth.py  test_backend_kind.py  test_broker_loopback.py  test_codec_webp.py  test_config.py  test_controller_a1_a3.py  test_coord_scaling.py  test_crypto_fingerprint.py  test_daemon.py  test_dependency_consistency.py  test_encoder_decoder.py  test_files_jail.py  test_framing.py  test_gui_honest_status.py  test_h264_set_fps.py  test_host_key_dialog.py  test_i18n.py  test_install_launcher.py  test_install_path.py  test_install_sh.py  test_jpeg_tile_diff.py  test_keygen.py  test_messages.py  test_protocol.py  test_release_workflow.py  test_server_gui_controller.py  test_server_gui_init.py  test_server_gui_platform.py  test_server_onefile_daemon.py  test_server_port_in_use.py  test_session.py  test_session_display_server.py  test_sftp_privileges.py  test_tofu_hostkeys.py  test_transport_connect_options.py  test_transport_get_stats.py  test_transport_view_provider.py  test_ui_polish.py  (+4 more)
