[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ssh-remote-desktop"
version = "1.0.0"
description = "SSH-only remote desktop (X11 + Wayland)"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.11"
dependencies = [
    "asyncssh>=2.23",
    "cryptography>=44",
    "bcrypt>=4.2",
    "numpy>=1.26",
    "Pillow>=10",
    "av>=11",
    "PySide6>=6.6",
    "msgpack>=1.0",
]

[project.scripts]
rd-server = "server.__main__:main"
rd-client = "client.__main__:main"

[tool.setuptools.packages.find]
include = ["server*", "client*", "common*", "crypto*"]
